--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,20 @@
     <script type="module" src="js/main.js"></script>
   </head>
   <body>
-    <div class="container py-4 px-3 mx-auto">
-      <h1>Hello, Bootstrap and Parcel!</h1>
-      <button type="button" class="btn btn-secondary">Secondary</button>
+    <nav></nav>
+    <div class="container-sm my-4">
+      <div class="survey square-box mx-auto text-center">
+        <div class="question">Twoje pytanie</div>
+        <div class="response">
+          <div class="response--1 text-muted my-3" data-num="1">
+            odpowiedz A
+          </div>
+          <div class="response--2 text-muted my-3" data-num="2">
+            odpowiedz B
+          </div>
+        </div>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+      </div>
     </div>
   </body>
 </html>
