--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
     <div class="container-sm my-4">
       <div class="survey square-box mx-auto text-center">
         <div class="question">Twoje pytanie</div>
-        <div class="response">
-          <div class="response--1 text-muted my-3" data-num="1">
+        <div class="response-section">
+          <div class="response response--1 text-muted my-3" data-num="1">
             odpowiedz A
           </div>
-          <div class="response--2 text-muted my-3" data-num="2">
+          <div class="response response--2 text-muted my-3" data-num="2">
             odpowiedz B
           </div>
         </div>
