adjusting formatting, work in progress

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap w/ Parcel</title>
+    <title>Wrodzony w katolicyzm</title>
     <link rel="stylesheet" href="scss/style.scss" />
     <script type="module" src="js/main.js"></script>
   </head>
@@ -11,16 +11,22 @@
     <nav></nav>
     <div class="container-sm my-4">
       <div class="survey square-box mx-auto text-center">
-        <div class="question">Twoje pytanie</div>
-        <div class="response-section">
-          <div class="response response--1 text-muted my-3" data-num="1">
-            odpowiedz A
-          </div>
-          <div class="response response--2 text-muted my-3" data-num="2">
-            odpowiedz B
-          </div>
+        <div class="question">
+          Witam Cię w teście wiary dla katolika 😎.
+          <p>
+            Sprawdźczy jesteś na wąskiej drodze do nieba, gdyż szeroka wjedzie
+            do zatracenia
+          </p>
+          <p>
+            W zanadrzu mamy parępytan do zadania na które odpowiedz a na końcu
+            zobaczysz czy jestes na WĄSKIEJ lub SZEROKIEJ drodze 🤗
+          </p>
         </div>
-        <button type="button" class="btn btn-secondary">Secondary</button>
+        <div class="response-section">
+          <div class="response response--1 text-muted my-3" data-num="1"></div>
+          <div class="response response--2 text-muted my-3" data-num="2"></div>
+        </div>
+        <button type="button" class="btn btn-secondary">😇 Startujemy!</button>
       </div>
     </div>
   </body>
