--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,11 @@
   </head>
   <body>
     <nav></nav>
-    <div class="container-sm my-4">
-      <div class="survey square-box mx-auto text-center">
+
+    <div class="container mx-auto my-4">
+      <div
+        class="survey shadow-lg p-3 mb-5 bg-body rounded container-md text-center"
+      >
         <div class="question">
           Witam Cię w teście wiary dla katolika 😎.
           <p>
@@ -25,8 +28,15 @@
         <div class="response-section">
           <div class="response response--1 text-muted my-3" data-num="1"></div>
           <div class="response response--2 text-muted my-3" data-num="2"></div>
+          <span
+            ><button
+              type="button"
+              class="btn btn-secondary position-absolute top-50 start-50 translate-middle"
+            >
+              😇 Startujemy!
+            </button></span
+          >
         </div>
-        <button type="button" class="btn btn-secondary">😇 Startujemy!</button>
       </div>
     </div>
   </body>
