--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav></nav>
 
-    <div class="container mx-auto my-4">
+    <div class="container mx-auto my-4" style="min-height: 450px">
       <div
         class="survey shadow-lg p-3 mb-5 bg-body rounded container-md text-center"
       >
