--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -40,13 +40,13 @@
     </nav>
 
     <div
-      class="container mx-auto my-4 vertical-center"
+      class="container-sm mx-auto my-4 vertical-center font-family-inter my-container"
       style="min-height: 450px"
     >
       <div
         class="survey shadow-lg p-3 mb-5 bg-body rounded container-md text-center"
       >
-        <div class="question px-1 py-1">
+        <div class="question px-1 py-1 ">
           Witam Cię w teście wiary dla katolika 😎.
           <p>
             Sprawdźczy jesteś na wąskiej drodze do nieba, gdyż szeroka wjedzie
@@ -76,9 +76,9 @@
       </div>
     </div>
   </body>
-</html> -->
+</html>
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -120,7 +120,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container mt-5">
+    <div class="container mt-5 font-family-inter">
       <div>
         <h1>Welcome to OpenAI</h1>
         <p>
@@ -136,7 +136,7 @@
             <div class="card-body">
               <h5 class="card-title">Research</h5>
               <p class="card-text">Tak</p>
-              <!-- <a href="#" class="btn btn-primary">Learn More</a> -->
+              
             </div>
           </div>
         </div>
@@ -145,7 +145,7 @@
             <div class="card-body">
               <h5 class="card-title">Blog</h5>
               <p class="card-text">Niw</p>
-              <!-- <a href="#" class="btn btn-primary">Read More</a> -->
+              
             </div>
           </div>
         </div>
