--- a/src/index.html
+++ b/src/index.html
@@ -10,27 +10,19 @@
   <body>
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="container-fluid">
+        
         <a class="navbar-brand" href="#"
           ><button
             type="button"
-            class="btn btn-return btn-outline-secondary"
-            alt="cofnij się o krok"
+            class="btn btn-restore btn-primary btn-sm"
+            alt="Wrócisz na ostnie pytanie na które udzielałeś odpowiedzi 🙌💾. Użyj teżaby przywrócićswój poprzedni progress (np. gdy cośCi przerwało)."
           >
-            ☜powrót
-          </button></a
-        >
-        <a class="navbar-brand" href="#"
-          ><button
-            type="button"
-            class="btn btn-restore btn-outline-secondary"
-            alt="Wrócisz na ostnie pytanie na które udzielałeś odpowiedzi :D"
-          >
-            Przywróć
+            Wróć/Przywróć
           </button></a
         ><a class="navbar-brand" href="#"
           ><button
             type="button"
-            class="btn btn-reset btn-outline-warning"
+            class="btn btn-reset btn-primary btn-sm"
             alt="Reset"
           >
             Reset
