new feature -edit

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,15 @@
           >
             Reset
           </button></a
+        ><a class="navbar-brand" href="editor.html"
+        ><button
+          type="button"
+          class="btn btn-edit btn-sm"
+          alt="Edytuj pytania i odpowiedzi"
         >
+          Edytuj
+        </button></a
+      >
       </div>
     </nav>
 
@@ -60,15 +68,15 @@
               zobaczysz czy jestes na WĄSKIEJ lub SZEROKIEJ drodze 🤗
             </p>
           </div>
-          <div class="response-section position-relative">
-            <div
+          <div class="response-section position-relative text-center">
+            <div class="row"><div
               class="response response--1 text-muted px-3 py-1"
               data-num="1"
-            ></div>
-            <div
+            ></div></div>
+            <div class="row"><div
               class="response response--2 text-muted px-3 py-1"
               data-num="2"
-            ></div>
+            ></div></div>
           </div>
           <button
             type="button"
