edit button additio in edit mode

--- a/src/editor.html
+++ b/src/editor.html
@@ -10,11 +10,11 @@
   <body>
     <nav class="navbar sticky-top navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"
+        <a class="navbar-brand btn-home-a" href="index.html"
           ><button type="button" class="btn btn-home btn-primary btn-sm" alt="">
             Home
           </button></a
-        ><a class="navbar-brand" href="#"
+        ><a class="navbar-brand btn-generate-a" href="#"
           ><button
             type="button"
             class="btn btn-generate btn-primary btn-sm"
@@ -22,7 +22,7 @@
           >
             Generuj widok
           </button></a
-        ><a class="navbar-brand" href="#"
+        ><a class="navbar-brand btn-save-a" href="#"
           ><button type="button" class="btn btn-save btn-sm" alt="">
             Zapisz
           </button></a
